--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.ts"
+    }
+  ],
   "functions": {
     "api/index.ts": {
       "maxDuration": 30
