--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.2",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "@vercel/node": "^3.0.7"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
