--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules", "api", "server"],
   "exclude": ["node_modules"]
 }
 
